[project]
name = "metaai"
description = "Unofficial ComfyUI environment using web scraping methods to enable Meta AI integration for text-to-image and image-to-video generation. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python==4.12.0.88", "Pillow==11.3.0", "requests==2.32.5", "numpy==2.2.6", "playwright==1.56.0", "psutil==7.1.3", "torch"]

[project.urls]
Repository = "https://github.com/systemaiofinterest-wq/ComfyUI-MetaAI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/systemaiofinterest-wq/ComfyUI-MetaAI/wiki"
"Bug Tracker" = "https://github.com/systemaiofinterest-wq/ComfyUI-MetaAI/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MetaAI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

